--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,26 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_home"
-            android:title="@string/home" />
+            android:id="@+id/nav_xemdiem"
+            android:icon="@drawable/img_xemdiem"
+            android:title="@string/xem_diem"/>
         <item
-            android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_profile"
-            android:title="@string/profile" />
+            android:id="@+id/nav_dkmon"
+            android:icon="@drawable/img_dangky"
+            android:title="@string/dang_ky_mon" />
+        <item
+            android:id="@+id/nav_taikhoan"
+            android:icon="@drawable/icon_people_grey"
+            android:title="@string/tai_khoan" />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/baseline_logout_24"
+            android:title="@string/dang_xuat" />
     </group>
-    <item android:title="@string/communication">
-        <menu>
-            <item
-                android:id="@+id/nav_email"
-                android:icon="@drawable/ic_email"
-                android:title="@string/email" />
-            <item
-                android:id="@+id/nav_chat"
-                android:icon="@drawable/ic_chat"
-                android:title="@string/chat" />
-        </menu>
-    </item>
 </menu>
