--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,9 +21,9 @@
     <style name="SpinnerTheme" parent="android:Widget.Spinner">
         <item name="android:background">@drawable/drop_down_icon</item>
     </style>
-    <style name="Theme.Test1.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.QLDSV.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="Theme.Test1.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.QLDSV.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Color of the action bar -->
         <item name="colorPrimary">#0E407D</item>
