--- a/app/src/main/res/layout/activity_ct_taikhoansv.xml
+++ b/app/src/main/res/layout/activity_ct_taikhoansv.xml
@@ -104,9 +104,11 @@
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
+
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp">
 
                 <TextView
@@ -126,7 +128,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/txtMatKhau"
                         android:layout_width="match_parent"
-                        android:layout_height="26dp"
+                        android:layout_height="54dp"
                         android:background="@color/white"
                         android:gravity="start"
                         android:inputType="textPassword" />
