--- a/app/src/main/res/layout/activity_doimatkhausv.xml
+++ b/app/src/main/res/layout/activity_doimatkhausv.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,6 +14,7 @@
             android:layout_height="wrap_content"
             android:background="@color/main">
             <Button
+                android:id="@+id/btnClickBack"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/main"
@@ -42,29 +44,95 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="vertical">
-            <EditText
+            android:orientation="vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nhập mật khẩu hiện tại"
-                android:padding="20dp"
-                android:layout_margin="20dp"
-                android:background="@color/background"/>
-            <EditText
+                android:text="Nhập mật khẩu hiện tại:"
+                android:textColor="@color/main"
+                android:textSize="20dp" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nhập mật khẩu mới"
-                android:padding="20dp"
-                android:layout_margin="20dp"
-                android:background="@color/background"/>
-            <EditText
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp">
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:passwordToggleEnabled="true">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/txtMKCu"
+                        android:layout_width="match_parent"
+                        android:layout_height="54dp"
+                        android:background="@color/white"
+                        android:gravity="start"
+                        android:inputType="textPassword" />
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nhập lại mật khẩu mới"
-                android:padding="20dp"
-                android:layout_margin="20dp"
-                android:background="@color/background"/>
+                android:text="Nhâp mật khẩu mới:"
+                android:textColor="@color/main"
+                android:textSize="20dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp">
+
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:passwordToggleEnabled="true">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/txtMKMoi"
+                        android:layout_width="match_parent"
+                        android:layout_height="54dp"
+                        android:background="@color/white"
+                        android:gravity="start"
+                        android:inputType="textPassword" />
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nhập lại mật khẩu mới:"
+                android:textColor="@color/main"
+                android:textSize="20dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp">
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:passwordToggleEnabled="true">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/txtMKMoiXN"
+                        android:layout_width="match_parent"
+                        android:layout_height="54dp"
+                        android:background="@color/white"
+                        android:gravity="start"
+                        android:inputType="textPassword" />
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
             <Button
+                android:id="@+id/btnDoiMatKhau"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="50dp"
