--- a/app/src/main/res/layout/trangchu_pgv.xml
+++ b/app/src/main/res/layout/trangchu_pgv.xml
@@ -54,6 +54,7 @@
             android:layout_gravity="center_vertical"
             android:padding="5dp">
             <Button
+                android:id="@+id/btnTaiKhoanSV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
