--- a/app/src/main/res/layout/trangchu_pgv.xml
+++ b/app/src/main/res/layout/trangchu_pgv.xml
@@ -86,5 +86,43 @@
                 android:drawableTop="@drawable/ic_loptinchi"
                 android:backgroundTint="@color/white"/>
         </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:padding="5dp">
+            <Button
+                android:id="@+id/btnThemThongBao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:padding="10dp"
+                android:text="Thêm thông báo"
+                android:textColor="@color/main"
+                android:drawableTop="@drawable/baseline_edit_notifications_24"
+                android:backgroundTint="@color/white"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:layout_marginLeft="5dp"
+                android:padding="10dp"
+                android:text=""
+                android:textColor="@color/main"
+                android:drawableTop="@drawable/baseline_notifications_none_24"
+                android:backgroundTint="@color/white"/>
+            <Button
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:padding="10dp"
+                android:text=""
+                android:textColor="@color/main"
+                android:drawableTop="@drawable/baseline_notifications_none_24"
+                android:backgroundTint="@color/white"/>
+        </TableRow>
     </TableLayout>
 </RelativeLayout>
