--- a/app/src/main/res/layout/activity_nhapdiem_ct_ltc.xml
+++ b/app/src/main/res/layout/activity_nhapdiem_ct_ltc.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".nhapdiem_ct_ltc">
+    tools:context=".NhapDiem_CT_LTC">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
