--- a/app/src/main/res/layout/activity_thongtinsv.xml
+++ b/app/src/main/res/layout/activity_thongtinsv.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content"
             android:background="@color/main">
             <Button
+                android:id="@+id/btnBack"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/main"
@@ -69,15 +70,17 @@
                     android:text="Tên sinh viên:"
                     android:textSize="20dp"
                     android:textColor="@color/main"/>
+
                 <TextView
+                    android:id="@+id/txtTenSV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Đặng Thanh Sang"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
                     android:gravity="end"
-                    android:textColor="@color/main"/>
+                    android:text="Đặng Thanh Sang"
+                    android:textColor="@color/main"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -91,6 +94,7 @@
                     android:textSize="20dp"
                     android:textColor="@color/main"/>
                 <TextView
+                    android:id="@+id/txtMSSV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -112,6 +116,7 @@
                     android:textSize="20dp"
                     android:textColor="@color/main"/>
                 <TextView
+                    android:id="@+id/txtGioiTinh"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -133,6 +138,7 @@
                     android:textSize="20dp"
                     android:textColor="@color/main"/>
                 <TextView
+                    android:id="@+id/txtNgaySinh"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -154,6 +160,7 @@
                     android:textSize="20dp"
                     android:textColor="@color/main"/>
                 <TextView
+                    android:id="@+id/txtDiaChi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -175,6 +182,7 @@
                     android:textSize="20dp"
                     android:textColor="@color/main"/>
                 <TextView
+                    android:id="@+id/txtNienKhoa"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
